@@ -1,3 +1,9 @@
+2005-10-19  David Ung  <davidu@mips.com>
+
+	* config/tc-mips.c (append_insn): Convert MIPS16 jr/jalr jumps
+	into jrc/jalrc versions if ISA_MIPS32+ and not doing the swap,
+	hence avoiding to emit a nop.
+
 2005-10-19  Jie Zhang  <jie.zhang@analog.com>
 
 	* config/tc-bfin.c (md_begin): Let the lex_type of '(' be
